// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterSidebar visual snapshots matches snapshot for sidebar panel only 1`] = `
<div
  class="
          fixed lg:sticky top-0 left-0 h-screen lg:h-auto w-80 bg-white dark:bg-gray-800 
          border-r lg:border-r-0 border-gray-200 dark:border-gray-700 
          overflow-y-auto z-50 lg:z-0 transition-transform duration-300
          -translate-x-full lg:translate-x-0
        "
  data-testid="filter-sidebar"
>
  <div
    class="p-6"
  >
    <div
      class="flex items-center justify-between mb-6"
    >
      <h2
        class="text-xl font-bold text-gray-900 dark:text-white"
      >
        Filters
      </h2>
      <div
        class="flex items-center gap-2"
      >
        <button
          class="lg:hidden text-gray-400 hover:text-gray-600"
        >
          <svg
            class="w-6 h-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <label
        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
      >
        Price Range
      </label>
      <div
        class="space-y-3"
      >
        <div>
          <label
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Min Price
          </label>
          <input
            class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
            placeholder="$0"
            type="number"
            value="0"
          />
        </div>
        <div>
          <label
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Max Price
          </label>
          <input
            class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
            placeholder="$10,000,000"
            type="number"
            value="10000000"
          />
        </div>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <label
        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
      >
        Property Type
      </label>
      <div
        class="space-y-2"
      >
        <label
          class="flex items-center cursor-pointer"
        >
          <input
            class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
            type="checkbox"
          />
          <span
            class="ml-2 text-sm text-gray-700 dark:text-gray-300"
          >
            Residential
          </span>
        </label>
        <label
          class="flex items-center cursor-pointer"
        >
          <input
            class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
            type="checkbox"
          />
          <span
            class="ml-2 text-sm text-gray-700 dark:text-gray-300"
          >
            Commercial
          </span>
        </label>
        <label
          class="flex items-center cursor-pointer"
        >
          <input
            class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
            type="checkbox"
          />
          <span
            class="ml-2 text-sm text-gray-700 dark:text-gray-300"
          >
            Industrial
          </span>
        </label>
        <label
          class="flex items-center cursor-pointer"
        >
          <input
            class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
            type="checkbox"
          />
          <span
            class="ml-2 text-sm text-gray-700 dark:text-gray-300"
          >
            Mixed Use
          </span>
        </label>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <label
        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
      >
        Blockchain Network
      </label>
      <div
        class="space-y-2"
      >
        <label
          class="flex items-center cursor-pointer"
        >
          <input
            class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
            type="checkbox"
          />
          <span
            class="ml-2 text-sm text-gray-700 dark:text-gray-300"
          >
            Ethereum
          </span>
        </label>
        <label
          class="flex items-center cursor-pointer"
        >
          <input
            class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
            type="checkbox"
          />
          <span
            class="ml-2 text-sm text-gray-700 dark:text-gray-300"
          >
            Polygon
          </span>
        </label>
        <label
          class="flex items-center cursor-pointer"
        >
          <input
            class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
            type="checkbox"
          />
          <span
            class="ml-2 text-sm text-gray-700 dark:text-gray-300"
          >
            Binance Smart Chain
          </span>
        </label>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <label
        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
      >
        ROI (Annual %)
      </label>
      <div
        class="space-y-3"
      >
        <div>
          <label
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Min ROI
          </label>
          <input
            class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
            max="100"
            min="0"
            placeholder="0%"
            type="number"
            value="0"
          />
        </div>
        <div>
          <label
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Max ROI
          </label>
          <input
            class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
            max="100"
            min="0"
            placeholder="100%"
            type="number"
            value="100"
          />
        </div>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <label
        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
      >
        Bedrooms
      </label>
      <div
        class="flex flex-wrap gap-2"
      >
        <button
          class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
        >
          1
          +
        </button>
        <button
          class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
        >
          2
          +
        </button>
        <button
          class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
        >
          3
          +
        </button>
        <button
          class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
        >
          4
          +
        </button>
        <button
          class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
        >
          5
          +
        </button>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <label
        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
      >
        Bathrooms
      </label>
      <div
        class="flex flex-wrap gap-2"
      >
        <button
          class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
        >
          1
          +
        </button>
        <button
          class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
        >
          2
          +
        </button>
        <button
          class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
        >
          3
          +
        </button>
        <button
          class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
        >
          4
          +
        </button>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <label
        class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
      >
        Square Feet
      </label>
      <div
        class="space-y-3"
      >
        <div>
          <label
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Min Sqft
          </label>
          <input
            class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
            placeholder="0"
            type="number"
            value="0"
          />
        </div>
        <div>
          <label
            class="text-xs text-gray-500 dark:text-gray-400"
          >
            Max Sqft
          </label>
          <input
            class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
            placeholder="50,000"
            type="number"
            value="50000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterSidebar visual snapshots matches snapshot with active filters 1`] = `
<div>
  <button
    class="lg:hidden fixed bottom-6 right-6 z-40 bg-blue-600 text-white px-6 py-3 rounded-full shadow-lg flex items-center gap-2"
  >
    <svg
      class="w-5 h-5"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    Filters
    <span
      class="bg-white text-blue-600 text-xs font-bold px-2 py-0.5 rounded-full"
    >
      Active
    </span>
  </button>
  <div
    class="
          fixed lg:sticky top-0 left-0 h-screen lg:h-auto w-80 bg-white dark:bg-gray-800 
          border-r lg:border-r-0 border-gray-200 dark:border-gray-700 
          overflow-y-auto z-50 lg:z-0 transition-transform duration-300
          -translate-x-full lg:translate-x-0
        "
    data-testid="filter-sidebar"
  >
    <div
      class="p-6"
    >
      <div
        class="flex items-center justify-between mb-6"
      >
        <h2
          class="text-xl font-bold text-gray-900 dark:text-white"
        >
          Filters
        </h2>
        <div
          class="flex items-center gap-2"
        >
          <button
            class="text-sm text-blue-600 hover:text-blue-700 dark:text-blue-400"
          >
            Clear all
          </button>
          <button
            class="lg:hidden text-gray-400 hover:text-gray-600"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Price Range
        </label>
        <div
          class="space-y-3"
        >
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Min Price
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              placeholder="$0"
              type="number"
              value="100000"
            />
          </div>
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Max Price
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              placeholder="$10,000,000"
              type="number"
              value="500000"
            />
          </div>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Property Type
        </label>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              checked=""
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Residential
            </span>
          </label>
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Commercial
            </span>
          </label>
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Industrial
            </span>
          </label>
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Mixed Use
            </span>
          </label>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Blockchain Network
        </label>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              checked=""
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Ethereum
            </span>
          </label>
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Polygon
            </span>
          </label>
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Binance Smart Chain
            </span>
          </label>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          ROI (Annual %)
        </label>
        <div
          class="space-y-3"
        >
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Min ROI
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              max="100"
              min="0"
              placeholder="0%"
              type="number"
              value="5"
            />
          </div>
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Max ROI
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              max="100"
              min="0"
              placeholder="100%"
              type="number"
              value="100"
            />
          </div>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Bedrooms
        </label>
        <div
          class="flex flex-wrap gap-2"
        >
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            1
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-blue-600 text-white border-blue-600"
          >
            2
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            3
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            4
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            5
            +
          </button>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Bathrooms
        </label>
        <div
          class="flex flex-wrap gap-2"
        >
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            1
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            2
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            3
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            4
            +
          </button>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Square Feet
        </label>
        <div
          class="space-y-3"
        >
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Min Sqft
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              placeholder="0"
              type="number"
              value="0"
            />
          </div>
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Max Sqft
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              placeholder="50,000"
              type="number"
              value="50000"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterSidebar visual snapshots matches snapshot with default filters 1`] = `
<div>
  <button
    class="lg:hidden fixed bottom-6 right-6 z-40 bg-blue-600 text-white px-6 py-3 rounded-full shadow-lg flex items-center gap-2"
  >
    <svg
      class="w-5 h-5"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 4a1 1 0 011-1h16a1 1 0 011 1v2.586a1 1 0 01-.293.707l-6.414 6.414a1 1 0 00-.293.707V17l-4 4v-6.586a1 1 0 00-.293-.707L3.293 7.293A1 1 0 013 6.586V4z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    Filters
  </button>
  <div
    class="
          fixed lg:sticky top-0 left-0 h-screen lg:h-auto w-80 bg-white dark:bg-gray-800 
          border-r lg:border-r-0 border-gray-200 dark:border-gray-700 
          overflow-y-auto z-50 lg:z-0 transition-transform duration-300
          -translate-x-full lg:translate-x-0
        "
    data-testid="filter-sidebar"
  >
    <div
      class="p-6"
    >
      <div
        class="flex items-center justify-between mb-6"
      >
        <h2
          class="text-xl font-bold text-gray-900 dark:text-white"
        >
          Filters
        </h2>
        <div
          class="flex items-center gap-2"
        >
          <button
            class="lg:hidden text-gray-400 hover:text-gray-600"
          >
            <svg
              class="w-6 h-6"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 18L18 6M6 6l12 12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Price Range
        </label>
        <div
          class="space-y-3"
        >
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Min Price
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              placeholder="$0"
              type="number"
              value="0"
            />
          </div>
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Max Price
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              placeholder="$10,000,000"
              type="number"
              value="10000000"
            />
          </div>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Property Type
        </label>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Residential
            </span>
          </label>
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Commercial
            </span>
          </label>
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Industrial
            </span>
          </label>
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Mixed Use
            </span>
          </label>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Blockchain Network
        </label>
        <div
          class="space-y-2"
        >
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Ethereum
            </span>
          </label>
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Polygon
            </span>
          </label>
          <label
            class="flex items-center cursor-pointer"
          >
            <input
              class="w-4 h-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500"
              type="checkbox"
            />
            <span
              class="ml-2 text-sm text-gray-700 dark:text-gray-300"
            >
              Binance Smart Chain
            </span>
          </label>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          ROI (Annual %)
        </label>
        <div
          class="space-y-3"
        >
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Min ROI
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              max="100"
              min="0"
              placeholder="0%"
              type="number"
              value="0"
            />
          </div>
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Max ROI
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              max="100"
              min="0"
              placeholder="100%"
              type="number"
              value="100"
            />
          </div>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Bedrooms
        </label>
        <div
          class="flex flex-wrap gap-2"
        >
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            1
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            2
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            3
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            4
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            5
            +
          </button>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Bathrooms
        </label>
        <div
          class="flex flex-wrap gap-2"
        >
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            1
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            2
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            3
            +
          </button>
          <button
            class="px-4 py-2 rounded-lg border transition-colors bg-white dark:bg-gray-700 text-gray-700 dark:text-gray-300 border-gray-300 dark:border-gray-600 hover:border-blue-600"
          >
            4
            +
          </button>
        </div>
      </div>
      <div
        class="mb-6"
      >
        <label
          class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-3"
        >
          Square Feet
        </label>
        <div
          class="space-y-3"
        >
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Min Sqft
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              placeholder="0"
              type="number"
              value="0"
            />
          </div>
          <div>
            <label
              class="text-xs text-gray-500 dark:text-gray-400"
            >
              Max Sqft
            </label>
            <input
              class="w-full mt-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
              placeholder="50,000"
              type="number"
              value="50000"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
